--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
