--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
+    "@types/mime": "^3.0.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -37,14 +39,19 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.388.0",
+    "@aws-sdk/client-ses": "^3.390.0",
+    "@aws-sdk/lib-storage": "^3.388.0",
     "@faker-js/faker": "^8.0.2",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "minimist": "^1.2.8",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.4"
