--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
     "minimist": "^1.2.8",
+    "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "sharp": "^0.32.4",
     "socket.io": "^4.7.2"
