--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "cross-env NODE_ENV=development npx nodemon",
+    "dev:stag": "cross-env NODE_ENV=staging npx nodemon",
+    "dev:prod": "cross-env NODE_ENV=production npx nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon --development",
-    "build": "rimraf ./dist && tsc && tsc-alias --production",
-    "start": "node dist/index.js",
+    "build": "rimraf ./dist && tsc && tsc-alias",
+    "start:dev": "cross-env NODE_ENV=development node dist/index.js",
+    "start:stag": "cross-env NODE_ENV=staging node dist/index.js",
+    "start:prod": "cross-env NODE_ENV=production  node dist/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
@@ -45,10 +49,13 @@
     "@faker-js/faker": "^8.0.2",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
